{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 23,
  "lineage": "323b4b96-5b22-0576-e27f-6c5031cf74ae",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_mat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000f163f1e6176bf4",
            "domain": "vpc",
            "id": "eipalloc-000f163f1e6176bf4",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-201-136-80.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.136.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main_nat_eipweb_server"
            },
            "tags_all": {
              "Name": "main_nat_eipweb_server"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00340d0ab26089a69",
            "domain": "vpc",
            "id": "eipalloc-00340d0ab26089a69",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-143-171.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.143.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main_nat_eipwas"
            },
            "tags_all": {
              "Name": "main_nat_eipwas"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc364214c973e1de",
            "domain": "vpc",
            "id": "eipalloc-0bc364214c973e1de",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-201-184-91.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.184.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main_nat_eipdatabase"
            },
            "tags_all": {
              "Name": "main_nat_eipdatabase"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:internet-gateway/igw-018e08bd93801c397",
            "id": "igw-018e08bd93801c397",
            "owner_id": "344513066772",
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000f163f1e6176bf4",
            "association_id": "eipassoc-0d6605181b79d08e9",
            "connectivity_type": "public",
            "id": "nat-0c8446024089436a0",
            "network_interface_id": "eni-00d9b1b50ba8e2605",
            "private_ip": "10.0.1.247",
            "public_ip": "43.201.136.80",
            "subnet_id": "subnet-0786c4fefbffc7d01"
          },
          "dependencies": [
            "module.vpc.aws_eip.main_mat_eip",
            "module.vpc.aws_internet_gateway.main_gw",
            "module.vpc.aws_subnet.main_public",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00340d0ab26089a69",
            "association_id": "eipassoc-0a0bd1f21a2d7be86",
            "connectivity_type": "public",
            "id": "nat-0da8ec8e18942b77a",
            "network_interface_id": "eni-0daad02bc53a5b01f",
            "private_ip": "10.0.2.123",
            "public_ip": "52.78.143.171",
            "subnet_id": "subnet-0024983c669b9e5e9"
          },
          "dependencies": [
            "module.vpc.aws_eip.main_mat_eip",
            "module.vpc.aws_internet_gateway.main_gw",
            "module.vpc.aws_subnet.main_public",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc364214c973e1de",
            "association_id": "eipassoc-008d30f4bf3a734e5",
            "connectivity_type": "public",
            "id": "nat-0e6ada9d1b57f9120",
            "network_interface_id": "eni-0d5a4819cbf269004",
            "private_ip": "10.0.3.100",
            "public_ip": "43.201.184.91",
            "subnet_id": "subnet-0a8b0f5396f5eff8e"
          },
          "dependencies": [
            "module.vpc.aws_eip.main_mat_eip",
            "module.vpc.aws_internet_gateway.main_gw",
            "module.vpc.aws_subnet.main_public",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020014187b856b4c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8446024089436a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020014187b856b4c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main_mat_eip",
            "module.vpc.aws_internet_gateway.main_gw",
            "module.vpc.aws_nat_gateway.main-nat-gateway",
            "module.vpc.aws_route_table.main_private_rt_table",
            "module.vpc.aws_subnet.main_public",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0085a8a3eaa4875a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0da8ec8e18942b77a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0085a8a3eaa4875a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main_mat_eip",
            "module.vpc.aws_internet_gateway.main_gw",
            "module.vpc.aws_nat_gateway.main-nat-gateway",
            "module.vpc.aws_route_table.main_private_rt_table",
            "module.vpc.aws_subnet.main_public",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d4cb0ad5c65b44a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e6ada9d1b57f9120",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d4cb0ad5c65b44a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main_mat_eip",
            "module.vpc.aws_internet_gateway.main_gw",
            "module.vpc.aws_nat_gateway.main-nat-gateway",
            "module.vpc.aws_route_table.main_private_rt_table",
            "module.vpc.aws_subnet.main_public",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:route-table/rtb-020014187b856b4c5",
            "id": "rtb-020014187b856b4c5",
            "owner_id": "344513066772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt_web_server"
            },
            "tags_all": {
              "Name": "private_rt_web_server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:route-table/rtb-0085a8a3eaa4875a1",
            "id": "rtb-0085a8a3eaa4875a1",
            "owner_id": "344513066772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt_was"
            },
            "tags_all": {
              "Name": "private_rt_was"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:route-table/rtb-03d4cb0ad5c65b44a",
            "id": "rtb-03d4cb0ad5c65b44a",
            "owner_id": "344513066772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt_database"
            },
            "tags_all": {
              "Name": "private_rt_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_private_rt-associationn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d462a416dcc366",
            "route_table_id": "rtb-020014187b856b4c5",
            "subnet_id": "subnet-0803124a18dd69eda"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_private_rt_table",
            "module.vpc.aws_subnet.main-private",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037d477d944372ea0",
            "route_table_id": "rtb-0085a8a3eaa4875a1",
            "subnet_id": "subnet-006e37d6c7f7faa3c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_private_rt_table",
            "module.vpc.aws_subnet.main-private",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07548e6d4738959ad",
            "route_table_id": "rtb-03d4cb0ad5c65b44a",
            "subnet_id": "subnet-09039959a6803dd5e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_private_rt_table",
            "module.vpc.aws_subnet.main-private",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-0803124a18dd69eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0803124a18dd69eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_web_server"
            },
            "tags_all": {
              "Name": "private_web_server"
            },
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-006e37d6c7f7faa3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e37d6c7f7faa3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_was"
            },
            "tags_all": {
              "Name": "private_was"
            },
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-09039959a6803dd5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09039959a6803dd5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_database"
            },
            "tags_all": {
              "Name": "private_database"
            },
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-0786c4fefbffc7d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0786c4fefbffc7d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_web_server"
            },
            "tags_all": {
              "Name": "public_web_server"
            },
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-0024983c669b9e5e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0024983c669b9e5e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_was"
            },
            "tags_all": {
              "Name": "public_was"
            },
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-0a8b0f5396f5eff8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8b0f5396f5eff8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_database"
            },
            "tags_all": {
              "Name": "public_database"
            },
            "vpc_id": "vpc-0a5704679bf46e90e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:vpc/vpc-0a5704679bf46e90e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef24c523df913dc6",
            "default_route_table_id": "rtb-0a59c51a3ed956554",
            "default_security_group_id": "sg-0a01dc2b0630ea796",
            "dhcp_options_id": "dopt-0eb428e4ec7d1bc0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5704679bf46e90e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a59c51a3ed956554",
            "owner_id": "344513066772",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}